Fixex navigation mobile menu

--- a/src/components/Navigation/SideDrawer/SideDrawer.css
+++ b/src/components/Navigation/SideDrawer/SideDrawer.css
@@ -1,4 +1,4 @@
-.SideDrawer{
+.SideDrawer {
   position: fixed;
   width: 280px;
   max-width: 70%;
@@ -12,20 +12,18 @@
   transition: transform 0.3s ease-out;
 }
 
-
-
 @media (min-width: 500px) {
-  .SideDrawer{
+  .SideDrawer {
     display: none;
   }
 }
 
-.Open{
-  transition: translateX(0);
+.Open {
+  transform: translateX(0);
 }
 
 .Close {
-  transition: translateX(-100%);
+  transform: translateX(-100%);
 }
 
 .Logo {
